finished rewriting disallowed event pair finding -- not exact match prob due to order of traversal